package julielerche.capstone.dynamodb.models;

public enum AssetType {
    POTION, ITEM, MONSTER;
}
