package julielerche.capstone.dynamodb.models;

public enum Difficulty {
    EASY, MEDIUM, HARD
}
