package julielerche.capstone.dynamodb.models;

public class Task {
}
