package julielerche.capstone.dynamodb.models;

public enum TaskType {
    DAILY, CHORE, TODO
}
